--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_AZURE_CLIENT_ID=<GUID_de_tu_App_Registration> ##Guid del resigtro
-VITE_AZURE_TENANT_ID=common     ##Tenant ID
-VITE_AZURE_REDIRECT_URI=http://localhost:5173 ##url a la que devuelva (Se registra como Redirect URI (SPA))
+VITE_AZURE_CLIENT_ID=60d9a880-0f6c-4e14-b17a-1cc06ea9ba8a ##Guid del resigtro
+VITE_AZURE_TENANT_ID= cd48ecd9-7e15-4f4b-97d9-ec813ee42b2c     ##Tenant ID
+VITE_AZURE_REDIRECT_URI=https://parking.estudiodemoda.com.co/ ##url a la que devuelva (Se registra como Redirect URI (SPA))
